# rust-terminal-travel

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
src/amadeus/: error.rs  execute.rs  mod.rs  schedule.rs
src/config/: mod.rs
src/itinerary/: display.rs  edit.rs  io.rs  mod.rs  visitor.rs
tests/data/: flight_status.json  playa.yml
travelcli/: Cargo.toml
