[package]
name = "terminal-travel"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
error-chain = "0.12"
newstr = { version = "0.1" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
tokio = { version = "1.5", features = ["full"] }
tracing = "0.1"
xdirs = "0.1"

[dev-dependencies]
pretty_assertions = "1.2"

[workspace]
members = [ "travelcli" ]