[package]
name = "terminal-travel"
version = "0.1.0"
description = "A Terminal CLI to manage travel itineraries."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "A Terminal CLI to manage travel itineraries."
license-file = "LICENSE"
readme = "README.md"
edition = "2018"

categories = [ "command-line-utilities" ]
keywords = [ "cli", "terminal", "travel" ]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
error-chain = "0.12"
newstr = { version = "0.1" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
tokio = { version = "1.5", features = ["full"] }
tracing = "0.1"
xdirs = "0.1"

[dev-dependencies]
pretty_assertions = "1.2"

[workspace]
members = [ "travelcli" ]